# box_shorthand

./: Cargo.toml  README.md
src/: lib.rs
tests/: test.rs
